# icpdb

./: .gitignore  AGENTS.md  Cargo.toml  README.md  icp.yaml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml
.local/: check.sh
crates/icpdb_canister/: Cargo.toml  icpdb.did
crates/icpdb_canister/src/: http.rs  lib.rs  tests.rs  tests_sync_contract.rs
crates/icpdb_database_canister/: Cargo.toml  icpdb_database.did
crates/icpdb_database_canister/src/: lib.rs  state.rs  tests.rs
crates/icpdb_runtime/: Cargo.toml
crates/icpdb_runtime/src/: database_executor.rs  lib.rs  sql.rs  sql_guard.rs  sql_identifier.rs  sql_snapshot.rs  sqlite_facade.rs  table_inspection.rs
crates/icpdb_runtime/tests/: database_service.rs
crates/icpdb_types/: Cargo.toml
crates/vfs_canister/: Cargo.toml  vfs.did
crates/vfs_canister/src/: lib.rs  tests.rs  tests_sync_contract.rs
crates/vfs_runtime/: Cargo.toml
docs/: DB_LIFECYCLE.md  GOAL_AUDIT.md  SHARDING.md  SQLITE_ADMIN_PROTOCOL.md
docs/internal/: DEPENDENCY_FORKS.md
icpdb-console/: .env.local.example  .gitignore  package.json  pnpm-lock.yaml  tsconfig.sdk.json  wrangler.jsonc
icpdb-console/app/: layout.tsx  not-found.tsx  page.tsx
icpdb-console/components/: icpdb-account-panels.tsx  icpdb-backup-billing-panels.tsx  icpdb-data-grid.tsx  icpdb-database-list-panel.tsx  icpdb-display-panels.tsx  icpdb-navigation-panels.tsx  icpdb-operation-panel.tsx  icpdb-permission-panel.tsx  icpdb-response-admin-panels.tsx  icpdb-response-metrics-panel.tsx  icpdb-response-sidebar.tsx  icpdb-result-grid.tsx  icpdb-row-editor-panel.tsx  icpdb-schema-viewers.tsx  icpdb-shard-panels.tsx  icpdb-sql-editor-panel.tsx  icpdb-table-data-panel.tsx  icpdb-table-editor-panel.tsx  icpdb-table-list-panel.tsx  icpdb-table-overview-panel.tsx  icpdb-table-schema-panel.tsx  icpdb-token-panel.tsx  icpdb-token-session-panel.tsx  icpdb-usage-events-panel.tsx  icpdb-workbench.tsx
icpdb-console/lib/: api-errors.js  api-errors.ts  console-connection.ts  database-transfer.ts  icpdb-account-api.ts  icpdb-actor.js  icpdb-actor.ts  icpdb-cli.ts  icpdb-client.ts  icpdb-idl.js  (+44 more)
scripts/: build-icpdb-canister.sh  build-icpdb-database-canister.sh  build-vfs-canister.sh  check-ci-workflow.mjs  check-icpdb-goal.mjs  check-icpdb-http-cli.mjs  check-icpdb-identity-cli.mjs  check-icpdb-local-network.mjs  check-icpdb-service-env-check.mjs  icpdb-http-account-command.mjs  icpdb-http-account-output.mjs  icpdb-http-canister-command.mjs  icpdb-http-canister.mjs  icpdb-http-command-builder.mjs  icpdb-http-command-utils.mjs  icpdb-http-csv-output.mjs  icpdb-http-data-command.mjs  icpdb-http-dispatch.mjs  icpdb-http-dump.mjs  icpdb-http-inspect.mjs  icpdb-http-output.mjs  icpdb-http-schema-output.mjs  icpdb-http-shell.mjs  icpdb-http-table-format.mjs  icpdb-http-transfer.mjs  icpdb-http-wait.mjs  icpdb-http.mjs  icpdb-identity.mjs  icpdb-local-browser-smoke.mjs  icpdb-local-cli-smoke.mjs  icpdb-local-console-shortest-smoke.mjs  icpdb-local-controller-quickstart-smoke.mjs  icpdb-local-deposit.mjs  icpdb-local-goal-smoke.mjs  icpdb-local-identity-cli-smoke.mjs  icpdb-local-identity-quickstart-smoke.mjs  icpdb-local-ii-browser-smoke.mjs  icpdb-local-multicanister-smoke.mjs  icpdb-local-network.mjs  icpdb-local-postdeploy-smoke.mjs  (+7 more)
wikibrowser/: README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+35 files in other folders)
