[package]
name = "icpdb-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10.9"
icpdb-types = { path = "../icpdb_types" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ic-sqlite-vfs = { version = "=0.2.2", default-features = false, features = ["sqlite-bundled", "bench-profile"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ic-sqlite-vfs = { version = "=0.2.2", default-features = false, features = ["sqlite-precompiled", "bench-profile"] }

[dev-dependencies]
tempfile = "3.23.0"
